# emfrp-repl

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  execPackcc.sh  library.json  setup-bsd.sh
docs/: RxPy_in_microPython.md  how_to_use_peripheral_in_ardupy.md
docs/design/peripheral/: initialization.md
example/esp-idf/: CMakeLists.txt  gen_parser.bat  gen_parser.sh  sdkconfig
example/esp-idf/main/: CMakeLists.txt  app_main.c
example/esp8266/: CMakeLists.txt
example/esp8266/main/: CMakeLists.txt  app_main.c  component.mk
example/microbitv2-zephyr/: .gitignore  CMakeLists.txt  README.md  prj.conf
example/microbitv2-zephyr/src/: main.c
example/python-gui/: emfrp-repl-gui.py
example/rpi-pico/: CMakeLists.txt  main.c  pico_sdk_import.cmake
example/unix/: CMakeLists.txt
example/unix/src/: main.c
example/windows/: CMakeLists.txt
example/windows/src/: main.c
gui/: emfrp-repl-gui.py
include/: .gitignore  ast.h  em_result.h  emfrp.h  emmem.h  extern_c_post.h  extern_c_pre.h  misc.h  parser.h  string_t.h  vm.h
include/collections/: arraylist_t.h  dictionary_t.h  list_t.h
include/hal/: console.h  str.mbed.h
include/vm/: exec.h  exec_sequence_t.h  gc.h  journal_t.h  machine.h  node_t.h  object_t.h  program.h  variable_t.h
project/common/: execPackcc.bat  execPackcc.sh  setup-haiku.sh  setup-macos-brew.sh
project/esp-idf/: gen_parser.bat  sdkconfig.old
project/esp-idf/main/: CMakeLists.txt
project/esp8266/: Makefile  gen_parser.sh  sdkconfig.old
project/esp8266/main/: CMakeLists.txt  component.mk
project/pc/: CMakeLists.txt
project/rpi-pico/: CMakeLists.txt
script/: execPackcc.bat  execPackcc.sh  platformio-postinstall.py  setup-apt.sh  setup-bsd.sh  setup-macos-brew.sh
src/: .gitignore  CMakeLists.txt  ast.c  component.mk  em_result.c  emfrp.c  main.c  parser.peg  string_t.c
src/collections/: arraylist_t.c  dictionary_t.c  list_t.c
src/hal/: console.esp32.c  console.esp8266.c  console.mbed.cpp  console.rpi.c  console.unix.c  console.win.c  str.mbed.c
src/main/: app_main.c  app_main.esp8266.c  main.c  rpi_main.c
src/vm/: exec.c  exec_sequence_t.c  gc.c  journal_t.c  machine.c  node_t.c  object_t.c  variable_t.c
